[gd_scene load_steps=8 format=2]

[ext_resource path="res://Archer.gd" type="Script" id=1]
[ext_resource path="res://archer.png" type="Texture" id=2]
[ext_resource path="res://archerfire.png" type="Texture" id=3]
[ext_resource path="res://arrowfire.wav" type="AudioStream" id=4]
[ext_resource path="res://playerdie.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "fire",
"speed": 5.0
} ]

[node name="Archer" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 5 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
centered = false

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 5, 5 )
enabled = true
collide_with_areas = true

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( 10, 0 )

[node name="ArrowCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="ArrowFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="PlayerDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ArrowCooldown" to="." method="_on_ArrowCooldown_timeout"]
